# g4-basic-scintillation

./: CMakeLists.txt  failed-aluminum.txt  main.cc  readme.md
include/: ActionInitialization.hh  AluminumProperties.hh  Analysis.hh  BerylliumProperties.hh  CMakeLists.txt  CeBr3Properties.hh  CrystalHit.hh  CrystalSensitiveDetector.hh  DetectorConstruction.hh  EventAction.hh  Materials.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  QuartzProperties.hh  RunAction.hh  SiHit.hh  SiProperties.hh  SiSensitiveDetector.hh  SteppingAction.hh  TeflonProperties.hh  VirtualHit.hh
macros/: gps_beam_center.mac  init_vis.mac  optical_diagnose.mac
scripts/: print_si_refr.py  readme.md  silicon_refr_idx_info.txt
src/: ActionInitialization.cc  Analysis.cc  CMakeLists.txt  CrystalHit.cc  CrystalSensitiveDetector.cc  DetectorConstruction.cc  EventAction.cc  Materials.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiHit.cc  SiSensitiveDetector.cc  SteppingAction.cc  VirtualHit.cc
